--- a/file/Lista alcolici.html
+++ b/file/Lista alcolici.html
@@ -113,10 +113,10 @@
                 <div class="container">
                     <h2>Vini bianchi</h2>
                     <ul>
-                        <li>Pici cacio e pepe</li>
-                        <li>La carbonara</li>
-                        <li>Ravioli asiago e funghi in salsa di aglio nero</li>
-                        <li>Risotto allo champagne e gamberi</li>
+                        <li>Vermentino di Gallura-Vigna'ngena-Capichera-Arzachena(Ot) 2010</li>
+                        <li>Pico-Garganega-Angiolino Maule-gambellara(Vi) 2010</li>
+                        <li>Agnese-Fior d'Arancio Secco-Azienda Agricola Alla costiera-Vò 2012(Pd)</li>
+                        <li>Soave Classico-montefiorentine-Montecchia di Crosara(Vr) 2005</li>
                     </ul>
                 </div>
             </div>
@@ -159,10 +159,10 @@
                 <div class="container">
                     <h2>Vini rossi</h2>
                     <ul>
-                        <li>Roast beef</li>
-                        <li>Tonno scottato in salsa di sesamo</li>
-                        <li>Caviale di melanzane con sgombro</li>
-                        <li>Insalata di tonno in avocado</li>
+                        <li>Barbera-Bunéis-Castello del Poggio(At) 2000</li>
+                        <li>Barbera-Solo Vino Rosso- Ferraro Maurizio-Montemagno(At) 2000</li>
+                        <li>Nebbiolo D'Alba-Bruno Giacosa-Nieve(Cn) 2008</li>
+                        <li>Tai Rosso-rezzadore-Lonigo(Vi) 2011</li>
                     </ul>
                 </div>
             </div>
