responsive testi+logo in tutte le pagine

--- a/file/Lista alcolici.html
+++ b/file/Lista alcolici.html
@@ -15,6 +15,9 @@
 <body>
     
     <header class="header clearfix">
+        <div class="header_logo">
+            <img src="../immagini/logo.png" alt="">
+        </div>
         <a href="" class="header_icon_bar">
             <span></span>
             <span></span>
