--- a/file/menu.html
+++ b/file/menu.html
@@ -16,7 +16,7 @@
     
     <header class="header clearfix">
         <div class="header_logo">
-            <img src="immagini/logo.png" alt="">
+            <img src="../immagini/logo.png" alt="">
         </div>
         <a href="" class="header_icon_bar">
             <span></span>
