--- a/file/menu.html
+++ b/file/menu.html
@@ -84,7 +84,7 @@
 
         <div class="presentazione" id="ps1" >
             <div class="container_slide" id="cs1">
-                <div class="slider reveal id="sl1">
+                <div class="slider reveal" id="sl1">
                     <div class="slides">
                         <input type="radio" name="radio-btn" id="radio5" >
                         <input type="radio" name="radio-btn" id="radio6" >
@@ -118,7 +118,7 @@
               
                 </div>
                 <div class="container">
-                    <h2 class=" reveal">Primi Piatti</h2>
+                    <h2 class="zoom">Primi Piatti</h2>
                     <ul class=" reveal">
                         <li>Pici cacio e pepe</li>
                         <li>La carbonara</li>
