--- a/Cwatch.html
+++ b/Cwatch.html
@@ -124,15 +124,38 @@
     </div>
 </div>
 </body>
-    <footer class="footer-container">
-        <ul>
-            <li>Copyright © 1997 - 2023 </li>
-            <li>P.Iva 00000000005</li>
-            <li> Termini e condizioni</li>
-            <li> Cookie</li>
-            <li>Contattaci: +33966677788</li>
-        </ul>
-    </footer>
+<footer>
+    <div class="footer-container">
+        <div class="footer-container-contatti">
+            <h3>Chiamaci</h3>
+            <a href="">+339 667180</a>
+            <br>
+            <h3> scrivici</h3>
+            <a href="">Cwatch@gmail.com</a>
+            <ul>
+                <li><a href="https://www.instagram.com/"><img src="instagram.png" alt=""></a></li>
+                <li><a href="https://it-it.facebook.com/"><img src="facebook.png" alt=""></a></li>
+                <li><a href="https://www.tripadvisor.it/"><img src="tripadvisor.png" alt=""></a></li>
+            </ul>
+        </div>  
+
+        <div class="footer-container-orari">
+            <h3>i nostri orari</h3>
+                <ul>
+                    <li>Lun: chiuso</li>
+                    <li>Mar • Sab: 12.00 • 14.30</li>
+                    <li>Mar • Dom: 18.00 • 22.00</li>
+                </ul>
+        </div>
+        <div class="footer-container-posto">
+            <h3>Ci trovi qui </h3>
+            <p> Via Pradiso, 39 Milano(MI)</p>
+        </div>
+    </div>
+    <div class="footer-container-copyright">
+        <p>Copyright 2021 • Tutti i Diritti Riservati • Privacy Policy • Informazioni di Trasparenza </p>
+    </div>
+</footer>
 
     <a href="https:://wa.me/393333333333/?text=" class="wa-link">
         <img src="immagini/wa.png" alt="" class="img-res">
