sistemato footer in tutti i file

--- a/file/i servizi.html
+++ b/file/i servizi.html
@@ -27,7 +27,7 @@
             <ul>
                 <li class="header_menu_item"><a href="../Cwatch.html">Home</a></li>
                 <li class="header_menu_item"> <a href="menu.html">Menù</a></li>
-                <li class="header_menu_item">I servizi</li>
+                <li class="header_menu_item"> <a href="i servizi.html">I servizi</a></li>
                 <li class="header_menu_item"><a href="contatti.html">Contatti</a></li>
                 <li class="header_menu_item"><a href="Lista alcolici.html">Enoteca e Drink</a></li>
             </ul>
@@ -211,9 +211,9 @@
             <h3> scrivici</h3>
             <a href="">Cwatch@gmail.com</a>
             <ul>
-                <li><a href="https://www.instagram.com/"><img src="instagram.png" alt=""></a></li>
-                <li><a href="https://it-it.facebook.com/"><img src="facebook.png" alt=""></a></li>
-                <li><a href="https://www.tripadvisor.it/"><img src="tripadvisor.png" alt=""></a></li>
+                <li><a href="https://www.instagram.com/"><img src="../immagini/instagram.png" alt=""></a></li>
+                <li><a href="https://it-it.facebook.com/"><img src="../immagini/facebook.png" alt=""></a></li>
+                <li><a href="https://www.tripadvisor.it/"><img src="../immagini/tripadvisor.png" alt=""></a></li>
             </ul>
         </div>  
 
