--- a/Cwatch.html
+++ b/Cwatch.html
@@ -133,9 +133,9 @@
             <h3> scrivici</h3>
             <a href="">Cwatch@gmail.com</a>
             <ul>
-                <li><a href="https://www.instagram.com/"><img src="instagram.png" alt=""></a></li>
-                <li><a href="https://it-it.facebook.com/"><img src="facebook.png" alt=""></a></li>
-                <li><a href="https://www.tripadvisor.it/"><img src="tripadvisor.png" alt=""></a></li>
+                <li><a href="https://www.instagram.com/"><img src="immagini/instagram.png" alt=""></a></li>
+                <li><a href="https://it-it.facebook.com/"><img src="immagini/facebook.png" alt=""></a></li>
+                <li><a href="https://www.tripadvisor.it/"><img src="immagini/tripadvisor.png" alt=""></a></li>
             </ul>
         </div>  
 
