--- a/file/contatti.html
+++ b/file/contatti.html
@@ -52,7 +52,7 @@
             tel. 02 3060451 <br>
             <a href="https://www.google.com/intl/it/gmail/about/">Cwatch@gmail.com</a>
         </p>
-        <img src="ristorazione.jpg" alt="" class="zoom">
+        <img src="../immagini/10.jpg" alt="" class="zoom">
     </div>
 </div> 
 </div> 
