--- a/file/Lista alcolici.html
+++ b/file/Lista alcolici.html
@@ -88,16 +88,16 @@
                         <input type="radio" name="radio-btn" id="radio7" >
                         <input type="radio" name="radio-btn" id="radio8" >
                         <div class="slide first">
-                            <img src="../immagini/primi piatti1.jpeg" alt="">
+                            <img src="../immagini/vinobianco1.jpg" alt="">
                         </div>
                         <div class="slide">
-                            <img src="../immagini/La carbonara.jpeg" alt="">
+                            <img src="../immagini/vinobianco2.png" alt="">
                         </div>
                         <div class="slide">
-                            <img src="../immagini/ravuoli.jpeg" alt="">
+                            <img src="../immagini/vinobianco3.jpg" alt="">
                         </div>
                         <div class="slide">
-                            <img src="../immagini/risotto.jpeg" alt="">
+                            <img src="../immagini/vinobianco4.png" alt="">
                         </div>    
                         <div class="navigation_auto">
                                 <div class="auto-btn1"></div>
@@ -135,16 +135,16 @@
                         <input type="radio" name="radio-btn" id="radio11" >
                         <input type="radio" name="radio-btn" id="radio12" >
                         <div class="slide first">
-                           <img src="../immagini/secondo1.jpeg" alt="">
+                           <img src="../immagini/vinorosso1.png" alt="">
                         </div>
                         <div class="slide">
-                            <img src="../immagini/tonno.jpeg" alt="">
+                            <img src="../immagini/vinorosso2.png" alt="">
                         </div>
                         <div class="slide">
-                            <img src="../immagini/sgombro.jpeg" alt="">
+                            <img src="../immagini/vinorosso3.jpg" alt="">
                         </div>
                         <div class="slide">
-                            <img src="../immagini/avocado.jpeg" alt="">
+                            <img src="../immagini/vinorosso4.jpg" alt="">
                         </div>    
                         <div class="navigation_auto">
                                 <div class="auto-btn1"></div>
@@ -181,16 +181,16 @@
                         <input type="radio" name="radio-btn" id="radio15" >
                         <input type="radio" name="radio-btn" id="radio16" >
                         <div class="slide first">
-                            <img src="../immagini/primi piatti1.jpeg" alt="">
+                            <img src="../immagini/cocktail1.avif" alt="">
                         </div>
                         <div class="slide">
-                            <img src="../immagini/La carbonara.jpeg" alt="">
+                            <img src="../immagini/cocktail2.jpg" alt="">
                         </div>
                         <div class="slide">
-                            <img src="../immagini/ravuoli.jpeg" alt="">
+                            <img src="../immagini/cocktail3.jpeg" alt="">
                         </div>
                         <div class="slide">
-                            <img src="../immagini/risotto.jpeg" alt="">
+                            <img src="../immagini/barman.jpg" alt="">
                         </div>    
                         <div class="navigation_auto">
                                 <div class="auto-btn1"></div>
