--- a/file/Lista alcolici.html
+++ b/file/Lista alcolici.html
@@ -25,11 +25,11 @@
             </a>
             <menu class="menu-container">
                 <ul>
-                    <li class="header_menu_item"><a href="Cwatch.html">Home</a></li>
-                    <li class="header_menu_item"><a href="file/menu.html">Menù</a></li>
-                    <li class="header_menu_item"><a href="file/i servizi.html">I servizi</a></li>
-                    <li class="header_menu_item"><a href="file/contatti.html">Contatti</a></li>
-                    <li class="header_menu_item"><a href="file/Lista alcolici.html">Enoteca e Drink</a></li>
+                    <li class="header_menu_item"><a href="../Cwatch.html">Home</a></li>
+                    <li class="header_menu_item"><a href="menu.html">Menù</a></li>
+                    <li class="header_menu_item"><a href="i servizi.html">I servizi</a></li>
+                    <li class="header_menu_item"><a href="contatti.html">Contatti</a></li>
+                    <li class="header_menu_item"><a href="Lista alcolici.html">Enoteca e Drink</a></li>
                 </ul>
             </menu>
         </header>
