--- a/file/i servizi.html
+++ b/file/i servizi.html
@@ -169,16 +169,16 @@
                     <input type="radio" name="radio-btn" id="radio15" >
                     <input type="radio" name="radio-btn" id="radio16" >
                     <div class="slide first">
-                        <img src="../immagini/181.0.jpeg" alt="">
+                        <img src="../immagini/laurea6.jpg" alt="">
                     </div>
                     <div class="slide">
                         <img src="../immagini/compleanno1.jpeg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../immagini/compleanni2.jpeg" alt="">
+                        <img src="../immagini/laurea2.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../immagini/compleanno3.jpeg" alt="">
+                        <img src="../immagini/laurea1.jpg" alt="">
                     </div>    
                     <div class="navigation_auto">
                             <div class="auto-btn1"></div>
