--- a/file/i servizi.html
+++ b/file/i servizi.html
@@ -25,7 +25,7 @@
         </a>
         <menu class="menu-container">
             <ul>
-                <li class="header_menu_item"><a href="../Cwatch.html">Home</a></li>
+                <li class="header_menu_item"><a href="../index.html">Home</a></li>
                 <li class="header_menu_item"> <a href="menu.html">Menù</a></li>
                 <li class="header_menu_item"> <a href="i servizi.html">I servizi</a></li>
                 <li class="header_menu_item"><a href="contatti.html">Contatti</a></li>
